Fix(back): Tests